@@ -8,6 +8,8 @@
   caching. Based on a patch from Grady Kuhnline.
 - Fixed issue #11181: A physical location is not required anymore for pure
   memory backends.
+- Fixed issue #11413: The search flag is off by default for restore() and
+  delete().
 
 
 1.2 - Monday 02 July 2007
